v0.0.2
------
 * Updated httpd patches for new tcp server fuzzing options
 * adding xcode project

v0.0.1
------
 * added 'update' make target that pulls honggfuzz and svn update httpd
 * first working version