@@ -86,7 +86,9 @@ INSTALL_ADDITIONAL="$INSTALL_ADDITIONAL nghttp2($NGHTTP2_VERSION)"
 # httpd 
 ################################################################################
 
-HTTPD_BRANCH=trunk
+#HTTPD_BRANCH=trunk
+HTTPD_BRANCH=2.4.x
+HTTPD_SVN_DIR=branches/2.4.x
 HTTPD_ROOT="${prefix}"
 
 BUILD_SUBDIRS="$BUILD_SUBDIRS httpd"
@@ -117,6 +119,7 @@ AC_SUBST(OPENSSL_CONF_CMD)
 AC_SUBST(NGHTTP2_DEPS)
 AC_SUBST(NGHTTP2_VERSION)
 AC_SUBST(HTTPD_BRANCH)
+AC_SUBST(HTTPD_SVN_DIR)
 AC_SUBST(HTTPD_ROOT)
 AC_SUBST(HF_BRANCH)
 AC_SUBST(HF_CC)
